# OHT_MAPF

./: .gitattributes  .gitignore  2022142223_problem2.cpp  CMakeLists.txt  claude.md  work_log.md
L0_methodology/: L1.md  L2.md
L1_purpose/: README.md
L2_structure/: claude_md_index.md  data_structure_design.md  data_types.md  folder_structure_and_responsibilities.md  system_architecture.md
L3_interface/data_structure/: avl_tree.md  avl_tree_node.md  data.md  dynamic_array.md  graph.md  linked_list.md  linked_list_node.md  min_heap.md  queue.md
L3_interface/data_types/: agent.md  interval.md  path.md
L3_interface/domain/environment/: README.md  environment.md
L3_interface/domain/planner/: README.md  bellman_phi.md  bfs_teg.md  planner.md
L3_interface/domain/planner/pathfinding/: bellman_phi.md  bfs_teg.md
L3_interface/domain/planner/reservation_table/: README.md  reservation_table.md
L3_modules/data_structure/: avl_tree.md  avl_tree_node.md  data.md  dynamic_array.md  linked_list.md  linked_list_node.md  queue.md
L4_functions/: avl_tree.md
L4_mechanism/: avl_tree.md  bellman_phi.md  bfs_teg.md  environment.md  prioritized_planning.md
L5_implementation/: CLAUDE.md  main.cpp  verify_phi.cpp
L5_implementation/data_structure/: avl_tree.cpp  avl_tree.h  data.cpp  data.h  dynamic_array.cpp  dynamic_array.h  graph.cpp  graph.h  linked_list.cpp  linked_list.h  min_heap.cpp  min_heap.h  node.cpp  node.h  queue.cpp  queue.h
L5_implementation/environment/: agent.cpp  agent.h  environment.cpp  environment.h
L5_implementation/planner/: bellman_phi.cpp  bellman_phi.h  bfs_teg.cpp  bfs_teg.h  pathfinding.cpp  pathfinding.h  planner.cpp  planner.h  prioritized_planning.cpp  prioritized_planning.h
L5_implementation/planner/reservation_table/: reservation_table.cpp  reservation_table.h
data/: PREPROCESSING.md  data_preprocessor.py  edges.txt  edges_expanded.txt  node_map.csv
results/presentation/: ASSET_PLAN.md  OHT_MAPF_presentation.pptx  PRESENTATION.md  build.js
